@@ -322,6 +322,8 @@ char *TCPNAMES[CF_NETATTR] =
   PROTECTED  struct Item *VALLADDCLASSES=NULL;        /* All classes */
   PROTECTED  struct Item *VJUSTACTIONS=NULL;
   PROTECTED  struct Item *VAVOIDACTIONS=NULL;
+  PROTECTED  struct Item *VDEFAULTROUTE=NULL;
+
   PROTECTED  struct UnMount *VUNMOUNT=NULL;
   PROTECTED  struct UnMount *VUNMOUNTTOP=NULL;
   PROTECTED  struct Edit *VEDITLIST=NULL;
@@ -373,7 +375,6 @@ char *TCPNAMES[CF_NETATTR] =
  PROTECTED char       VSYSADM[CF_MAXVARSIZE];
  PROTECTED char      VNETMASK[CF_MAXVARSIZE];
  PROTECTED char    VBROADCAST[CF_MAXVARSIZE];
- PROTECTED char VDEFAULTROUTE[CF_MAXVARSIZE];
  PROTECTED char      VNFSTYPE[CF_MAXVARSIZE];
  PROTECTED char       VFQNAME[CF_MAXVARSIZE];
  PROTECTED char       VUQNAME[CF_MAXVARSIZE];
